--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@angular/common": "~2.4.3",
     "@angular/compiler": "~2.4.3",
     "@angular/core": "~2.4.3",
+    "@angular/flex-layout": "^2.0.0-beta.3",
     "@angular/forms": "~2.4.3",
     "@angular/http": "~2.4.3",
     "@angular/material": "^2.0.0-beta.1",
@@ -81,6 +82,7 @@
     "@angularclass/hmr": "~1.2.2",
     "@angularclass/hmr-loader": "~3.0.2",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "jasmine-core": "^2.5.2",
@@ -91,7 +93,7 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "~2.4.3",
-    "@types/hammerjs": "^2.0.33",
+    "@types/hammerjs": "^2.0.34",
     "@types/jasmine": "^2.2.34",
     "@types/node": "^7.0.0",
     "@types/selenium-webdriver": "~2.53.39",
